--- a/src/main/resources/templates/formcategorias.html
+++ b/src/main/resources/templates/formcategorias.html
@@ -4,7 +4,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <title>TODO supply a title</title>
+        <title>Tienda de Ropa APU.com - Categorias</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -13,31 +13,37 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Tienda de Ropa APU</a>
+          
+               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-md-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="#">Home</a>
+                           <a class="nav-link" href="/">TIENDA DE ROPA APU</a>
                         </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link " href="/categorias">Lista de Categorias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="/categorias/form">Nueva Categoria</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/">Otra Página</a>
+                        </li>
+
 
                     </ul>
                 </div>
-            </div>
+            
         </nav>
         
         <div class="container">
 
-            <h2>Formulario de Categorias</h2>
+            <h3>Formulario de Categorias</h3>
         
             <form action="/categorias" th:object="${categoria}" method="post">
 
@@ -45,14 +51,14 @@
                     <input type="hidden" th:field="*{id}" id="id" name="id" readonly>
                 </div>
 
-                <div>
+                <div class="form-group">
                     <label for="nombre">Nombre:</label>
-                    <input type="text" th:field="*{nombre}" id="nombre" name="nombre" maxlength="255" required>
+                    <input class="form-control" type="text" th:field="*{nombre}" id="nombre" name="nombre" maxlength="255" required>
                 </div>
 
                 <div>
                     <label for="departamento">Departamento:</label>
-                    <input type="text" th:field="*{departamento}" id="departamento" name="departamento" maxlength="255" required>
+                    <input type="text" class="form-control" th:field="*{departamento}" id="departamento" name="departamento" maxlength="255" required>
                 </div>
 
                 <div>
@@ -61,7 +67,7 @@
                 </div>
 
                 <div>
-                    <input type="submit" value="Guardar"> 
+                    <input type="submit" value="Guardar" class="btn btn-primary"> 
                     <a href="/categorias">Cancelar</a>
                 </div>
                 
