--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,41 +2,65 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org">
-    
+
     <head>
+
         <title>Tienda de Ropa APU.com - Página Princial</title>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css" type="text/css"/>
         <!-- comment -->
+
     </head>
     <body>
-        <div>
-          
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Tienda de Ropa APU</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/categorias">Lista de Categorias</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/categorias/form">Nueva Categoria</a>
-                            </li>
-                           
-                        </ul>
-                    </div>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-md-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">TIENDA DE ROPA APU</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link " href="/categorias">Lista de Categorias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/categorias/form">Nueva Categoria</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Otra Página</a>
+                    </li>
+
+
+                </ul>
+            </div>
+
+        </nav>
+
+
+        <div class=" mt-4 px-5 container">
+            <div class="row featurette">
+                <div class="col-md-7 pt-7 text-center">
+                    <h2 class="featurette-heading">Sean bienvenidos. <span class="text-muted">A la tienda de ropa de apu</span></h2>
+                    <p class="lead">Aqui podras encontrar ropa para niños y niñas, Hombres, mujeres y en futuros perros</p>
                 </div>
-            </nav>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+                <div class="col-md-5">
+                    <img class="featurette-image img-fluid mx-auto" src="https://media.newyorker.com/photos/5a0dd9b7ae84d238abda66cb/master/w_727,c_limit/Hsu-Soft-Racism-of-Apu.jpg"
+                         alt="Generic placeholder image">
+                </div>
+
+            </div>
+
+
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
