--- a/src/main/resources/templates/listacategorias.html
+++ b/src/main/resources/templates/listacategorias.html
@@ -11,37 +11,44 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Tienda de Ropa APU</a>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          
+               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-md-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="#">Home</a>
+                           <a class="nav-link" href="/">TIENDA DE ROPA APU</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link " href="/categorias">Lista de Categorias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/categorias">Lista de Categorias</a>
+                            <a class="nav-link active" href="/categorias/form">Nueva Categoria</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link" href="/categorias/form">Nueva Categoria</a>
+                            <a class="nav-link" aria-current="page" href="/">Otra Página</a>
                         </li>
+
 
                     </ul>
                 </div>
-            </div>
+            
         </nav>
+        
 
-        <div class="container">
+        <div class="mt-5 px-5 container">
 
-            <h2>Lista de Categorias</h2>
+            <h3 class="text-center">Lista de Categorias</h3>
 
             <form action="/categorias"method="get">
                 <label for="criterio">Buscar por:</label>
                 <input type="text" th:value="${criterio}" id="critero" name="criterio">
-                <input type="submit" value="Buscar">
+                <input type="submit" value="Buscar" class="btn btn-primary">
             </form>
 
             <table class="table">
@@ -58,14 +65,14 @@
                 </thead>
                 <tbody>
 
-                    <tr th:if="${not #lists.isEmpty(categorias)}" th:each="categoria:${categorias}">
+                    <tr th:if="${not #lists.isEmpty(categorias)}" th:each= "categoria:${categorias}">
                         <td scope="row" th:text="${categoria.id}">...</td> 
                         <td th:text="${categoria.nombre}">...</td>
                         <td th:text="${categoria.departamento}">.</td>
                         <td th:text="${categoria.hab}">...</td>
                         <td>
-                            <a th:href="${'/categorias/form/'+categoria.id}">Editar</a>
-                            <a th:href="${'/categorias/eliminar/'+categoria.id}">Eliminar</a>
+                            <a class="btn btn-success" th:href="${'/categorias/form/'+categoria.id}">Editar</a>
+                            <a class="btn btn-danger"th:href="${'/categorias/eliminar/'+categoria.id}">Eliminar</a>
                         
                         </td>
                     </tr>
